# location-management-system

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  PLANS.md  README.md  design.md  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  turbo.json
apps/api/: AGENTS.override.md  README.md  alembic.ini  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260324_0001_create_initial_tables.py  20260324_0002_add_import_job_tables.py  20260324_0003_add_store_configs.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: router.py
apps/api/app/api/dependencies/: __init__.py  auth.py
apps/api/app/api/routes/: admin_auth.py  admin_geocoding.py  admin_imports.py  admin_locations.py  taxonomy.py  (+3 more)
apps/api/app/core/: config.py  logging.py  security.py
apps/api/app/db/: __init__.py  session.py
apps/api/app/models/: __init__.py  admin_user.py  location.py  location_import_job.py  location_import_row_error.py  store_config.py
apps/api/app/repositories/: admin_users.py  imports.py  locations.py  store_configs.py
apps/api/app/schemas/: auth.py  geocoding.py  imports.py  location.py  store_config.py
apps/api/app/scripts/: bootstrap_db.py  seed_admin.py
apps/api/app/services/: bootstrap.py  geocoding.py  geocoding_provider.py  imports.py  locations.py  seed.py  store_configs.py
apps/api/tests/: test_admin_authorization.py  test_config.py  test_cors.py  test_geocoding.py  test_health.py  test_imports.py  test_location_seeds.py  test_security.py  test_smoke_api.py  test_store_configs.py
(+64 files in other folders)
